.provarCaches/00D5f000005vwGkEAI/objects/rstk__icitemfifoseq__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_icitemfifoseq</customHelpPage>
    <description>icitemfifoseq__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_defaultproject__c</fullName>
        <formula>rstk__icitemfifoseq_div__r.rstk__sydiv_dflthomeproj__c</formula>
        <inlineHelpText>Home Project for this Cost Record</inlineHelpText>
        <label>Home Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icitemfifoseq_item__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__icitemfifoseq_proj__r.rstk__pjproj_proj__c &amp; &apos;_&apos; &amp;  TEXT(rstk__icitemfifoseq_seq__c) &amp; &apos;_&apos; &amp; TEXT(NOW())</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icitemfifoseq_item__r.Name + &apos;_&apos; +  rstk__icitemfifoseq_proj__r.rstk__pjproj_proj__c + &apos;_&apos; +  TEXT(rstk__icitemfifoseq_seq__c)</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__icitemfifoseq_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__icitemfifoseq_item__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos; &apos; +  rstk__icitemfifoseq_proj__r.rstk__pjproj_proj__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_actucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the actual cost when the record was created 

On a purchase receipt, this is the PO Price (adjusted by the Purchasing to Inventory Unit of Measure conversion factor). (DD)</description>
        <inlineHelpText>This is the actual cost when the record was created.</inlineHelpText>
        <label>Avg Unit Cost, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_datetime__c</fullName>
        <description>This is the date and time the record is added. (DD)</description>
        <inlineHelpText>Date and Time of transaction.</inlineHelpText>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>FIFO Cost Record</relationshipLabel>
        <relationshipName>Inventory_Item_Fifo_Seq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_icdreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When applicable, this field carries a reference to the Disassembly Derived Component who’s receipt created this FIFO detail.</inlineHelpText>
        <label>Disassembly Derived Component</label>
        <referenceTo>rstk__icdreq__c</referenceTo>
        <relationshipLabel>FIFO Cost Record</relationshipLabel>
        <relationshipName>icitemfifoseqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_item__c</fullName>
        <inlineHelpText>Inventory Item Number</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>FIFO Cost Record</relationshipLabel>
        <relationshipName>icitemfifoseqs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_lstadjdatetime__c</fullName>
        <description>This is the Date/Time associated with the last adjustment of this record. (DD)</description>
        <inlineHelpText>This is the Date/Time associated with the last adjustment of this record.</inlineHelpText>
        <label>Last Adj Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_origtxnqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the transaction quantity associated with the original creation of this FIFO record. 

The ICITEMFIFOSEQ_QTY can be decremented by a work order issue (for example) – but this ICITEMFIFOSEQ_ORIGTXNQTY will never be altered. (DD)</description>
        <inlineHelpText>This is the transaction quantity associated with the original creation of this FIFO record.</inlineHelpText>
        <label>Orig Txn Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If Project Control is active within the division, this is the project number for this on-hand inventory. 

If Project Control is not active within the division, this field is null. (DD)</description>
        <inlineHelpText>This is the Project associated with this FIFO record.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>FIFO Cost Record</relationshipLabel>
        <relationshipName>Inventory_Item_Fifo_Seq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the quantity associated with this FIFO record 

When a purchase receipt is processed for a FIFO controlled item (PEITEM_FIFOIND = ‘T’) and the ICITEMFIFOSEQ record is added, this quantity field is set to the quantity (in the inventory unit of measure) on the purchased item receipt. (An ICITEMFIFOSEQ record is added when there is an addition to inventory or an adjustment up in inventory or a work order issue reversal). 

When a work order issue is processed the quantity is reduced by the quantity of the issue. (DD)</description>
        <inlineHelpText>Quantity for this Transaction</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_rcptno__c</fullName>
        <description>If this record was created by a purchase receipt, this is the receipt number associated with the creation of this FIFO record. (DD)</description>
        <inlineHelpText>If this is a Purchase receipt, this is the associated receipt number.</inlineHelpText>
        <label>Receipt No</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_seq__c</fullName>
        <inlineHelpText>This is the auto-generated sequence number for this Inventory record.</inlineHelpText>
        <label>Sequence Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_seqno__c</fullName>
        <description>This is the auto-generated sequence number for this Inventory record. (DD)</description>
        <inlineHelpText>Obsolete field - FIFO Sequence Number</inlineHelpText>
        <label>Obsolete</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_txnid__c</fullName>
        <description>This is the transaction ID created when the record was created 

Some of the values are as follows: 

‘PORCPT’ – if created by a purchase receipt 

‘INVLOCADD’ – if created by an inventory location addition 

‘INVLOCADJ’ – if created by an adjustment (up)  

‘WOISSR’ – if created by a work order issue reversal 

‘SOISSR’ – if created by a sales order pick reversal. (DD)</description>
        <inlineHelpText>This is the transaction ID for the record.</inlineHelpText>
        <label>Txn ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitemfifoseq_usrno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the manufacturing user that created the record. (DD)</description>
        <inlineHelpText>This is the manufacturing user that created the record.</inlineHelpText>
        <label>Mfg User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>FIFO Cost Record</relationshipLabel>
        <relationshipName>Inventory_Item_Fifo_Seq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>FIFO Cost Record</label>
    <listViews>
        <fullName>rstk__RS_FIFO_Cost_Record</fullName>
        <columns>NAME</columns>
        <columns>rstk__icitemfifoseq_div__c</columns>
        <columns>rstk__icitemfifoseq_item__c</columns>
        <columns>rstk__icitemfifoseq_proj__c</columns>
        <columns>rstk__icitemfifoseq_rcptno__c</columns>
        <columns>rstk__icitemfifoseq_origtxnqty__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__icitemfifoseq_qty__c</columns>
        <columns>rstk__icitemfifoseq_seq__c</columns>
        <columns>rstk__icitemfifoseq_datetime__c</columns>
        <columns>rstk__icitemfifoseq_actucstmtl__c</columns>
        <columns>rstk__icitemfifoseq_lstadjdatetime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>FIFO Cost  Record</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FIFO Cost Record</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>